--- a/Global_South.Rmd
+++ b/Global_South.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Mapping the Politics of the New Global South"
-author: "Professor Mark Bradley and Neeraj Sharma"
+author: "Neeraj Sharma"
 date: "7/31/2019"
 output: github_document
 ---
@@ -11,72 +11,55 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 
 # Introduction
 
+I am working for Professor Mark Bradley in the History Department at the University of Chicago this summer on his research project, Mapping the Politics of the New Global South. 
+
 # Setup
 
-Prior to performing analysis on the data collected, it is necessary to prep the work environment so it contains all the vital groundwork for exploration. 
+Prior to performing analysis on the data collected, it is necessary to prep the work environment so it contains all the packages necessary for exploration. 
 
 ## Load Packages
 
 ```{r}
+# Relevant to data importation, structuring and visualization
 library(tidyverse)
 library(knitr)
 library(readr)
 library(here)
+
+# Relevant to data formatting
 library(lubridate)
 library(countrycode)
 
+# Relevant to text analysis
 library(tidytext)
 library(stringr)
 library(SnowballC)
 ```
 
-## Import Data
+## Import datasets
+
+These datasets were produced through the corpus_maker.R script. The original source files are from Mikhaylov.
 
 ```{r}
-corpus_1970 <- read_tsv(here("Data", "raw_speeches_mikhaylov_project.tsv"))
-
-continents_1970 <- corpus_1970 %>%
-  mutate(Country = countrycode(Country_ABB, origin = "iso3c", destination = "country.name")) %>%
-  # Unknown countries that I have to handmatch are CSK, DDR, EU, YDYE, YUG. These countries aren't in the ISO3c vocab because they no longer exist 
-  mutate(Country = ifelse(is.na(Country), ifelse(`Country_ABB` == "CSK", "Czechoslovakia", NA), Country)) %>%
-  mutate(Country = ifelse(is.na(Country), ifelse(`Country_ABB` == "DDR", "East Germany", NA), Country)) %>%
-  mutate(Country = ifelse(is.na(Country), ifelse(`Country_ABB` == "EU", "EU?", NA), Country)) %>%
-  mutate(Country = ifelse(is.na(Country), ifelse(`Country_ABB` == "YDYE", "South Yemen/People's Democratic Republic of Yemen", NA), Country)) %>%
-  mutate(Country = ifelse(is.na(Country), ifelse(`Country_ABB` == "YUG", "Yugoslavia", NA), Country))
-
-
-unigrams_corpus_1970 <- continents_1970 %>%
-  # Expand text of speeches into individual words
-  unnest_tokens(output = word, input = text) %>%
-  # Removes numbers
-  filter(!str_detect(word, "^[0-9]*$")) %>%
-  # Removes stop words
-  anti_join(stop_words) %>%
-  # Stemms words
-  mutate(word_stem = wordStem(word)) %>%
-  select(-doc_id, -Country_ABB, -word)
-
-bigrams_corpus_1970 <- continents_1970 %>%
-  # Expand text of speeches into individual words
-  unnest_tokens(output = word, input = text, token = "ngrams", n = 2) %>%
-  # Removes stop words
-  separate(word, into = c("first_word","second_word"), sep = " ", remove = FALSE) %>%
-  anti_join(stop_words, by = c("first_word" = "word")) %>%
-  anti_join(stop_words, by = c("second_word" = "word")) %>%
-  # Removes numbers
-  filter(!str_detect(first_word, "^[0-9]*$") & !str_detect(second_word, "^[0-9]*$")) %>%
-  # Stemms words
-  mutate(first_word_stem = wordStem(first_word), second_word_stem = wordStem(second_word), word_stem = paste(first_word_stem, second_word_stem, sep = " ")) %>%
+unigrams_corpus_1970on <- read_tsv(here::here("Data", "unigrams_mikhaylov_project.tsv")) %>%
   select(Session, Year, Country, word_stem)
 
+bigrams_corpus_1970on <- read_tsv(here::here("Data", "bigrams_mikhaylov_project.tsv")) %>%
+  select(Session, Year, Country, word_stem)
 ```
 
-## Glimpse at the content
+## Glimpse at the content of the datasets
+
+Unigrams
 
 ```{r}
-unigrams_corpus_1970
-
-bigrams_corpus_1970
+kable(unigrams_corpus_1970on %>% slice(1:10))
 ```
 
-# Analysis 
+Bigrams
+
+```{r}
+kable(bigrams_corpus_1970on %>% slice(1:10))
+```
+
+# Analysis
