fixed sort on bigrams data so it didnt start with AFG

--- a/Global_South.Rmd
+++ b/Global_South.Rmd
@@ -59,7 +59,7 @@ kable(unigrams_corpus_1970on %>% slice(1:10))
 Bigrams
 
 ```{r}
-kable(bigrams_corpus_1970on %>% slice(1:10))
+kable(bigrams_corpus_1970on %>% filter(Session == 25) %>% slice(1:10))
 ```
 
 # Analysis
