added  information on count of frequency of words by decade.

--- a/Global_South.Rmd
+++ b/Global_South.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Mapping the Politics of the New Global South"
+title: "Mapping the Politics of the New Global South, Progress Update"
 author: "Neeraj Sharma"
 date: "7/31/2019"
 output: github_document
@@ -45,7 +45,7 @@ unigrams_corpus_1970on <- read_tsv(here::here("Data", "unigrams_mikhaylov_projec
   select(Session, Year, Country, word_stem)
 
 bigrams_corpus_1970on <- read_tsv(here::here("Data", "bigrams_mikhaylov_project.tsv")) %>%
-  select(Session, Year, Country, word_stem)
+  select(Session, Year, Country, first_word_stem, second_word_stem, word_stem)
 ```
 
 ## Glimpse at the content of the datasets
@@ -62,4 +62,75 @@ Bigrams
 kable(bigrams_corpus_1970on %>% filter(Session == 25) %>% slice(1:10))
 ```
 
-# Analysis
+# Sentiment Analysis
+
+```{r}
+# corpus_affin df only contains words that have affinities mapped to them
+unigrams_corpus_affin <- unigrams_corpus_1970on %>% 
+  inner_join(get_sentiments("afinn"), by = c("word_stem" = "word"))
+
+bigrams_corpus_affin <- bigrams_corpus_1970on %>% 
+  inner_join(get_sentiments("afinn"), by = c("first_word_stem" = "word")) %>%
+  inner_join(get_sentiments("afinn"), by = c("second_word_stem" = "word")) %>%
+  mutate(mean_sentiment = (value.x+value.y)/2)
+```
+
+# Common Words by Decade
+
+```{r}
+UN_stop_words <- tibble(words = c("nation", 
+                                  "unit", 
+                                  "intern", 
+                                  "countri", 
+                                  "develop", 
+                                  "peac"
+                                  ))
+```
+
+```{r}
+seventies_freq <- unigrams_corpus_1970on %>%
+  filter(Year == 1970) %>%
+  anti_join(UN_stop_words, by = c("word_stem" = "words")) %>%
+  group_by(word_stem) %>%
+  count(sort = TRUE) %>%
+  arrange(desc(n)) %>%
+  ungroup() %>%
+  slice(1:10)
+
+ninties_freq <- unigrams_corpus_1970on %>%
+  filter(Year == 1990) %>%
+  anti_join(UN_stop_words, by = c("word_stem" = "words")) %>%
+  group_by(word_stem) %>%
+  count(sort = TRUE) %>%
+  arrange(desc(n)) %>%
+  ungroup() %>%
+  slice(1:10)
+
+tens_freq <- unigrams_corpus_1970on %>%
+  filter(Year == 2010) %>%
+  anti_join(UN_stop_words, by = c("word_stem" = "words")) %>%
+  group_by(word_stem) %>%
+  count(sort = TRUE) %>%
+  arrange(desc(n)) %>%
+  ungroup() %>%
+  slice(1:10)
+
+ggplot(data = seventies_freq, mapping = aes(x = reorder(word_stem, n), y = n, label = n)) +
+  geom_col() +
+  geom_text(hjust = 1.5, fontface = "bold", color = "White") +
+  coord_flip() +
+  labs(title = "Most common words in 1970", x = "Words (Stemmed)", y = "Number of Mentions")
+
+ggplot(data = ninties_freq, mapping = aes(x = reorder(word_stem, n), y = n, label = n)) +
+  geom_col() +
+  geom_text(hjust = 1.5, fontface = "bold", color = "White") +
+  coord_flip() +
+  labs(title = "Most common words in 1990", x = "Words (Stemmed)", y = "Number of Mentions")
+
+ggplot(data = tens_freq, mapping = aes(x = reorder(word_stem, n), y = n, label = n)) +
+  geom_col() +
+  geom_text(hjust = 1.5, fontface = "bold", color = "White") +
+  coord_flip() +
+  labs(title = "Most common words in 2010", x = "Words (Stemmed)", y = "Number of Mentions")
+
+```
