--- a/Global_South.Rmd
+++ b/Global_South.Rmd
@@ -139,26 +139,42 @@ I was encouraged by Professor Bradley to investigate keyword trends over time in
 
 Here is what emerged based on this analysis. 
 
-```{r}
+```{r fig.height = 10, fig.width = 10}
 indonesia_count_word_year <- unigrams_corpus_1970on %>%
   filter(Country == "Indonesia") %>%
   anti_join(UN_stop_words, by = c("word_stem" = "words")) %>%
+#  mutate(Year = cut(Year, breaks=c(1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010, 2015, 2018), right = FALSE)) %>%
   group_by(Year, word_stem) %>%
   count() %>%
   group_by(Year) %>%
   top_n(n = 5) %>%
+  arrange(desc(n), .by_group = TRUE) %>%
   ungroup() %>%
   mutate(Year = as.factor(Year)) %>%
-  slice(1:10)
-
+  slice(1:28)
+#  slice(1:40)
 indonesia_count_word_year
+
+# paste(indonesia_count_word_year$word_stem, indonesia_count_word_year$n, sep = ", ")
+
+ggplot(data = indonesia_count_word_year, mapping = aes(x = Year, y = n, label = word_stem)) +
+  geom_col(aes(group = sort(as.factor(word_stem), decreasing = TRUE)), color = "White", position = "dodge") +
+  geom_text(position = position_dodge(0.9), aes(group = sort(as.factor(word_stem), decreasing = TRUE), hjust = 1.5), color = "White") +
+  labs(title = "ggplot with decreasing as the item") +
+  coord_flip()
+
+ggplot(data = indonesia_count_word_year, mapping = aes(x = Year, y = n, label = word_stem)) +
+  geom_col(aes(group = sort(as.factor(word_stem), descending = TRUE)), color = "White", position = "dodge") +
+  geom_text(position = position_dodge(0.9), aes(group = sort(as.factor(word_stem), descending = TRUE), hjust = 1.5), color = "White") +
+  labs(title = "ggplot with descending as the item") +
+  coord_flip()
 
 
 ggplot(data = indonesia_count_word_year, mapping = aes(x = Year, y = n, label = word_stem)) +
-  geom_bar(aes(fill = word_stem), position = "dodge", stat="identity") +
-  geom_text(hjust = 1.5, fontface = "bold", color = "Black", position = "dodge")
-  
-  
+  geom_col(aes(group = word_stem), color = "White", position = "dodge") +
+  geom_text(position = position_dodge(0.9), aes(group = word_stem, hjust = 1.5), color = "White") +
+  coord_flip()
+
 ```
 
 ```{r}
