--- a/Global_South.Rmd
+++ b/Global_South.Rmd
@@ -137,45 +137,31 @@ I was encouraged by Professor Bradley to investigate keyword trends over time in
 *Mexico
 *Egypt
 
-Here is what emerged based on this analysis. 
+Here is what emerged based on this analysis.
 
 ```{r fig.height = 10, fig.width = 10}
 indonesia_count_word_year <- unigrams_corpus_1970on %>%
   filter(Country == "Indonesia") %>%
   anti_join(UN_stop_words, by = c("word_stem" = "words")) %>%
-#  mutate(Year = cut(Year, breaks=c(1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010, 2015, 2018), right = FALSE)) %>%
-  group_by(Year, word_stem) %>%
-  count() %>%
+  mutate(Year = cut_interval(Year, length = 5)) %>%
+  group_by(Year) %>%
+  count(word_stem) %>%
   group_by(Year) %>%
   top_n(n = 5) %>%
   arrange(desc(n), .by_group = TRUE) %>%
   ungroup() %>%
-#  mutate(Year = as.factor(Year)) %>%
-  mutate(word_stem = as.factor(word_stem)) %>%
-  slice(1:28)
-#  slice(1:40)
-indonesia_count_word_year
+  mutate(Year = as.factor(Year),
+           name = reorder_within(word_stem, n, Year))
 
-# paste(indonesia_count_word_year$word_stem, indonesia_count_word_year$n, sep = ", ")
-
-ggplot(data = indonesia_count_word_year, mapping = aes(x = Year, y = n, label = word_stem)) +
-  geom_col(aes(group = sort(word_stem, decreasing = TRUE)), color = "White", position = "dodge") +
-  geom_text(position = position_dodge(0.9), aes(group = sort(word_stem, decreasing = TRUE), hjust = 1.5), color = "White") +
-  labs(title = "ggplot with decreasing as the item") +
-  coord_flip()
-
-ggplot(data = indonesia_count_word_year, mapping = aes(x = Year, y = n, label = word_stem)) +
-  geom_col(aes(group = sort(as.factor(word_stem), descending = TRUE)), color = "White", position = "dodge") +
-  geom_text(position = position_dodge(0.9), aes(group = sort(as.factor(word_stem), descending = TRUE), hjust = 1.5), color = "White") +
-  labs(title = "ggplot with descending as the item") +
-  coord_flip()
-
-
-ggplot(data = indonesia_count_word_year, mapping = aes(x = Year, y = n, label = word_stem)) +
-  geom_col(aes(group = word_stem), color = "White", position = "dodge") +
-  geom_text(position = position_dodge(0.9), aes(group = word_stem, hjust = 1.5), color = "White") +
-  coord_flip()
-
+ggplot(data = indonesia_count_word_year, mapping = aes(x = name, y = n, fill = Year)) +
+    geom_col(show.legend = FALSE) +
+    facet_wrap(~Year, scales = "free_y") +
+    coord_flip() +
+    scale_x_reordered() +
+    scale_y_continuous(expand = c(0,0)) +
+    labs(y = "Words",
+         x = "Count",
+         title = "Most Common Words Over Time (Indonesia)")
 ```
 
 ```{r}
